--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
                 </section>
             </ul>
         </section>
+       <img src="https://masterpiecer-images.s3.yandex.net/dbfb4cf278ae11ee8fbe92669a1675b3:upscaled" alt="Картинка Hexlet">
       </main> 
 </body>
 </html>
